2008-01-16 Sergii Stoian <stoyan255@gmail.com>

	* GNUmakefile: Remove FileRTF.tiff from resoures.
	* Images/FileRTF.tiff: Removed.
	* Images/FileM.tiff,
	* Images/FileMH.tiff,
	* Images/FileH.tiff,
	* Images/FileHH.tiff,
	* Images/FileC.tiff,
	* Images/FileCH.tiff,
	Moved to Modules/Editors/ProjectEditor/Resources.
	* Images/FileProject.tiff: Added
	* Modules/Editors/ProjectCenter/PCEditor.h: Added new variable 
	_isEditable.
	* Modules/Editors/ProjectCenter/PCEditor.m: 
	(_createEditorViewWithFrame:): Set editable state for NSTextView here.
	Add observer for changed text notification here.
	* Resources/Info.plist: NSTypes was extended.

2008-01-15 Sergii Stoian <stoyan255@gmail.com>

	* Framework/PCBundleManager.m: (objectForClassName:bundleType:protocol:)
	Return nil if className is nil.

2007-12-20  Nicola Pero  <nicola.pero@meta-innovation.com>

	* PCMakefileFactory.m ([-createPreambleForProject:]): Output the
	-l flags in the ADDITIONAL_GUI_LIBS variable, not the
	ADDITIONAL_LDFLAGS one.  This should fix linking applications on
	Windows, but will not work well for linking non-GUI libraries.
	ProjectCenter needs to be extended to allow specifying
	ADDITIONAL_TOOL_LIBS and ADDITIONAL_OBJC_LIBS on the gui.

2007-12-13  Nicola Pero  <nicola.pero@meta-innovation.com>

	* GNUmakefile.preamble (ADDITIONAL_LIB_DIRS): Improved linking to
	the ProjectCenter framework when it's not installed yet so that it
	should work on non-flattened layouts.
	* Modules/GNUmakefile.bundles (ADDITIONAL_LIB_DIRS): Same change.
	(BUNDLE_INSTALL_DIR): Use GNUSTEP_APPS, not GNUSTEP_SYSTEM_ROOT.

2007-09-27 Sergii Stoian <stoyan255@gmail.com>

	* Framework/PCBundleManager.m,
	* Headers/ProjectCenter/PCBundleManager.h: Make massive cleaup.
	some methods changed, some deleted, some added.
	* Framework/PCProjectManager.m,
	* Framework/PCProjectEditor.m: Make use of changed PCBundleManager.
	* TextFinder.m:
	(-enterSelection:): Add sanity check for text variable.
	(-jumpToSelection:): Ditto.