@@ -1,3 +1,9 @@
+2008-01-17 Sergii Stoian <stoyan255@gmail.com>
+
+	* Framework/PCProjectBrowser.m: (doubleClick:): open file with
+	external application only if NSWorkspace doesn't return
+	"ProjectCenter.app" appliction name.
+
 2008-01-16 Sergii Stoian <stoyan255@gmail.com>
 
 	* GNUmakefile: Remove FileRTF.tiff from resoures.
